agent_script/src/main/java/agent_script/antlr/AgentScriptParser.java
// Generated from AgentScript.g4 by ANTLR 4.7.1
package agent_script.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AgentScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NAMESPACE=1, IMPORT=2, AS=3, CONSTANT=4, FUNCTION=5, END=6, IF=7, ELSE=8, 
		RETURN=9, WHILE=10, COMMA=11, LPAREN=12, RPAREN=13, DOT=14, SCOPE=15, 
		BOOLEAN=16, NUMBER=17, STRING=18, NIL=19, ASSIGN=20, LT=21, LE=22, GT=23, 
		GE=24, EQ=25, NE=26, AND=27, OR=28, NOT=29, ADD=30, SUB=31, MUL=32, DIV=33, 
		LMETA=34, RMETA=35, LNATIVE=36, RNATIVE_QUOTE=37, SYMBOL=38, COMMENT=39, 
		WHITESPACE=40, NATIVE_CHARS=41, RNATIVE=42, LNATIVE_QUOTE=43;
	public static final int
		RULE_script = 0, RULE_meta = 1, RULE_namespaceDefinition = 2, RULE_importDeclaration = 3, 
		RULE_constantDefinition = 4, RULE_functionDefinition = 5, RULE_block = 6, 
		RULE_statement = 7, RULE_assignStatement = 8, RULE_ifStatement = 9, RULE_elseIfStatement = 10, 
		RULE_elseStatement = 11, RULE_whileStatement = 12, RULE_returnStatement = 13, 
		RULE_functionCallStatement = 14, RULE_nativeStatement = 15, RULE_expression = 16;
	public static final String[] ruleNames = {
		"script", "meta", "namespaceDefinition", "importDeclaration", "constantDefinition", 
		"functionDefinition", "block", "statement", "assignStatement", "ifStatement", 
		"elseIfStatement", "elseStatement", "whileStatement", "returnStatement", 
		"functionCallStatement", "nativeStatement", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", "'import'", "'as'", "'constant'", "'function'", "'end'", 
		"'if'", "'else'", "'return'", "'while'", "','", "'('", "')'", "'.'", "'::'", 
		null, null, null, "'nil'", "'='", "'<'", "'<='", "'>'", "'>='", "'=='", 
		"'!='", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "'#['", "']'", 
		null, "'}'", null, null, null, null, null, "'{'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NAMESPACE", "IMPORT", "AS", "CONSTANT", "FUNCTION", "END", "IF", 
		"ELSE", "RETURN", "WHILE", "COMMA", "LPAREN", "RPAREN", "DOT", "SCOPE", 
		"BOOLEAN", "NUMBER", "STRING", "NIL", "ASSIGN", "LT", "LE", "GT", "GE", 
		"EQ", "NE", "AND", "OR", "NOT", "ADD", "SUB", "MUL", "DIV", "LMETA", "RMETA", 
		"LNATIVE", "RNATIVE_QUOTE", "SYMBOL", "COMMENT", "WHITESPACE", "NATIVE_CHARS", 
		"RNATIVE", "LNATIVE_QUOTE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AgentScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgentScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public ImportDeclarationContext importDeclaration;
		public List<ImportDeclarationContext> importDeclarations = new ArrayList<ImportDeclarationContext>();
		public ConstantDefinitionContext constantDefinition;
		public List<ConstantDefinitionContext> constantDefinitions = new ArrayList<ConstantDefinitionContext>();
		public FunctionDefinitionContext functionDefinition;
		public List<FunctionDefinitionContext> functionDefinitions = new ArrayList<FunctionDefinitionContext>();
		public NamespaceDefinitionContext namespaceDefinition() {
			return getRuleContext(NamespaceDefinitionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AgentScriptParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			namespaceDefinition();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(35);
				((ScriptContext)_localctx).importDeclaration = importDeclaration();
				((ScriptContext)_localctx).importDeclarations.add(((ScriptContext)_localctx).importDeclaration);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT) | (1L << FUNCTION) | (1L << LMETA))) != 0)) {
				{
				setState(43);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(41);
					((ScriptContext)_localctx).constantDefinition = constantDefinition();
					((ScriptContext)_localctx).constantDefinitions.add(((ScriptContext)_localctx).constantDefinition);
					}
					break;
				case 2:
					{
					setState(42);
					((ScriptContext)_localctx).functionDefinition = functionDefinition();
					((ScriptContext)_localctx).functionDefinitions.add(((ScriptContext)_localctx).functionDefinition);
					}
					break;
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetaContext extends ParserRuleContext {
		public Token SYMBOL;
		public List<Token> metaSymbols = new ArrayList<Token>();
		public TerminalNode LMETA() { return getToken(AgentScriptParser.LMETA, 0); }
		public TerminalNode RMETA() { return getToken(AgentScriptParser.RMETA, 0); }
		public List<TerminalNode> SYMBOL() { return getTokens(AgentScriptParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(AgentScriptParser.SYMBOL, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AgentScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AgentScriptParser.COMMA, i);
		}
		public MetaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meta; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitMeta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaContext meta() throws RecognitionException {
		MetaContext _localctx = new MetaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_meta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(LMETA);
			setState(51);
			((MetaContext)_localctx).SYMBOL = match(SYMBOL);
			((MetaContext)_localctx).metaSymbols.add(((MetaContext)_localctx).SYMBOL);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(52);
				match(COMMA);
				setState(53);
				((MetaContext)_localctx).SYMBOL = match(SYMBOL);
				((MetaContext)_localctx).metaSymbols.add(((MetaContext)_localctx).SYMBOL);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(RMETA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceDefinitionContext extends ParserRuleContext {
		public Token nameSymbol;
		public TerminalNode NAMESPACE() { return getToken(AgentScriptParser.NAMESPACE, 0); }
		public TerminalNode SYMBOL() { return getToken(AgentScriptParser.SYMBOL, 0); }
		public MetaContext meta() {
			return getRuleContext(MetaContext.class,0);
		}
		public NamespaceDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitNamespaceDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceDefinitionContext namespaceDefinition() throws RecognitionException {
		NamespaceDefinitionContext _localctx = new NamespaceDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespaceDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LMETA) {
				{
				setState(61);
				meta();
				}
			}

			setState(64);
			match(NAMESPACE);
			setState(65);
			((NamespaceDefinitionContext)_localctx).nameSymbol = match(SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public Token nameSymbol;
		public Token aliasSymbol;
		public TerminalNode IMPORT() { return getToken(AgentScriptParser.IMPORT, 0); }
		public List<TerminalNode> SYMBOL() { return getTokens(AgentScriptParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(AgentScriptParser.SYMBOL, i);
		}
		public TerminalNode AS() { return getToken(AgentScriptParser.AS, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(IMPORT);
			setState(68);
			((ImportDeclarationContext)_localctx).nameSymbol = match(SYMBOL);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(69);
				match(AS);
				setState(70);
				((ImportDeclarationContext)_localctx).aliasSymbol = match(SYMBOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public Token nameSymbol;
		public ExpressionContext valueExpression;
		public TerminalNode CONSTANT() { return getToken(AgentScriptParser.CONSTANT, 0); }
		public TerminalNode ASSIGN() { return getToken(AgentScriptParser.ASSIGN, 0); }
		public TerminalNode SYMBOL() { return getToken(AgentScriptParser.SYMBOL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MetaContext meta() {
			return getRuleContext(MetaContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitConstantDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constantDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LMETA) {
				{
				setState(73);
				meta();
				}
			}

			setState(76);
			match(CONSTANT);
			setState(77);
			((ConstantDefinitionContext)_localctx).nameSymbol = match(SYMBOL);
			setState(78);
			match(ASSIGN);
			setState(79);
			((ConstantDefinitionContext)_localctx).valueExpression = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public Token nameSymbol;
		public Token SYMBOL;
		public List<Token> argumentSymbols = new ArrayList<Token>();
		public TerminalNode FUNCTION() { return getToken(AgentScriptParser.FUNCTION, 0); }
		public TerminalNode LPAREN() { return getToken(AgentScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AgentScriptParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(AgentScriptParser.END, 0); }
		public List<TerminalNode> SYMBOL() { return getTokens(AgentScriptParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(AgentScriptParser.SYMBOL, i);
		}
		public MetaContext meta() {
			return getRuleContext(MetaContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(AgentScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AgentScriptParser.COMMA, i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LMETA) {
				{
				setState(81);
				meta();
				}
			}

			setState(84);
			match(FUNCTION);
			setState(85);
			((FunctionDefinitionContext)_localctx).nameSymbol = match(SYMBOL);
			setState(86);
			match(LPAREN);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SYMBOL) {
				{
				setState(87);
				((FunctionDefinitionContext)_localctx).SYMBOL = match(SYMBOL);
				((FunctionDefinitionContext)_localctx).argumentSymbols.add(((FunctionDefinitionContext)_localctx).SYMBOL);
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(90);
				match(COMMA);
				setState(91);
				((FunctionDefinitionContext)_localctx).SYMBOL = match(SYMBOL);
				((FunctionDefinitionContext)_localctx).argumentSymbols.add(((FunctionDefinitionContext)_localctx).SYMBOL);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(RPAREN);
			setState(98);
			block();
			setState(99);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement;
		public List<StatementContext> statements = new ArrayList<StatementContext>();
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << RETURN) | (1L << WHILE) | (1L << LNATIVE) | (1L << SYMBOL))) != 0)) {
				{
				{
				setState(101);
				((BlockContext)_localctx).statement = statement();
				((BlockContext)_localctx).statements.add(((BlockContext)_localctx).statement);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public FunctionCallStatementContext functionCallStatement() {
			return getRuleContext(FunctionCallStatementContext.class,0);
		}
		public NativeStatementContext nativeStatement() {
			return getRuleContext(NativeStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				assignStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				ifStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				whileStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				returnStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				functionCallStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				nativeStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public Token nameSymbol;
		public ExpressionContext valueExpression;
		public TerminalNode ASSIGN() { return getToken(AgentScriptParser.ASSIGN, 0); }
		public TerminalNode SYMBOL() { return getToken(AgentScriptParser.SYMBOL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitAssignStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((AssignStatementContext)_localctx).nameSymbol = match(SYMBOL);
			setState(116);
			match(ASSIGN);
			setState(117);
			((AssignStatementContext)_localctx).valueExpression = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ExpressionContext testExpression;
		public ElseIfStatementContext elseIfStatement;
		public List<ElseIfStatementContext> elseIfStatements = new ArrayList<ElseIfStatementContext>();
		public TerminalNode IF() { return getToken(AgentScriptParser.IF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(AgentScriptParser.END, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ElseStatementContext elseStatement() {
			return getRuleContext(ElseStatementContext.class,0);
		}
		public List<ElseIfStatementContext> elseIfStatement() {
			return getRuleContexts(ElseIfStatementContext.class);
		}
		public ElseIfStatementContext elseIfStatement(int i) {
			return getRuleContext(ElseIfStatementContext.class,i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IF);
			setState(120);
			((IfStatementContext)_localctx).testExpression = expression(0);
			setState(121);
			block();
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(122);
					((IfStatementContext)_localctx).elseIfStatement = elseIfStatement();
					((IfStatementContext)_localctx).elseIfStatements.add(((IfStatementContext)_localctx).elseIfStatement);
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(128);
				elseStatement();
				}
			}

			setState(131);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseIfStatementContext extends ParserRuleContext {
		public ExpressionContext testExpression;
		public TerminalNode ELSE() { return getToken(AgentScriptParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(AgentScriptParser.IF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ElseIfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseIfStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitElseIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseIfStatementContext elseIfStatement() throws RecognitionException {
		ElseIfStatementContext _localctx = new ElseIfStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_elseIfStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ELSE);
			setState(134);
			match(IF);
			setState(135);
			((ElseIfStatementContext)_localctx).testExpression = expression(0);
			setState(136);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStatementContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(AgentScriptParser.ELSE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ElseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgentScriptVisitor ) return ((AgentScriptVisitor<? extends T>)visitor).visitElseStatement(this);
			else return visitor.visitChildren(this);
		}
	}
